Fix dark mode alert close button

--- a/src-ui/src/theme_dark.scss
+++ b/src-ui/src/theme_dark.scss
@@ -36,11 +36,11 @@ $border-color-dark-mode: #47494f;
     --bs-primary: hsl(var(--pngx-primary),var(--pngx-primary-lightness));
     --bs-primary-rgb: var(--bs-primary);
   }
-  
+
   .navbar-brand {
     color: var(--bs-body-color);
   }
-  
+
   .border {
     border-color: var(--bs-border-color) !important;
   }
@@ -141,11 +141,11 @@ $border-color-dark-mode: #47494f;
     color: $text-color-dark-mode-accent;
   }
 
-  .close, .modal .btn-close {
+  .close, .modal .btn-close, .alert .btn-close {
     text-shadow: 0 1px 0 #666;
   }
 
-  .modal .btn-close {
+  .modal .btn-close, .alert .btn-close {
     filter: invert(1) grayscale(100%) brightness(200%);
   }
 
@@ -156,7 +156,7 @@ $border-color-dark-mode: #47494f;
   .toast {
     background-color: hsla(var(--pngx-primary), calc(var(--pngx-primary-lightness) - 18%), 0.9);
   }
-  
+
   .toast-header {
     background-color: hsla(var(--pngx-primary), calc(var(--pngx-primary-lightness) - 10%), 0.9);
   }
